2012-02-11 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-17 Improve migration

2012-02-10 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-15/16
	* Extension of menu-diff: use the result of the diff between two
	  configuration as a patch to modify a third configuration,
	  resulting in a patched, fourth configuration.
	  Only added or changed paths, but not deleted paths, are
	  updated (deep update, ie, including changed sequences
	  and modules)

2012-02-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-14
	* Add "Assign path to a primary dataset" option attached to each path (bug/feature 82526).
	* Add "Remove path from a primary dataset" option attached to each path (bug/feature 82526).
	* Add "Assign path to a primary dataset" option in Stream menu for each path.
	* Add "Remove path from P.dataset" option in Stream menu for each path. 
	
2012-02-08 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-13
	* Smarter parameter updating when replacing module

2012-02-07 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-12
	* Extend search&replace to plugin type (for normal modules only)
	* tag V01-06-09/10/11
	* Extend module replacement to copys of modules or new instances

2012-02-03 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-08
	* Add/remove path to/from a primary dataset using Drag&Drop method (bug/feature 82526).

2012-02-02 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-07
	* Allow moving datasets from one stream to another (bug/feature 88066).
	* Add error alerts and revert operations for dataset transfer failures (bug/feature 88066). 
	* Put some more comments to (bug/feature 89524).
	
2012-01-31 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-06
	* Better implementation of SinglePathPrescaleTable and PrescaleTableService 
	  in different files, using class inheritance, and proper names.